# war2tools

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CmakeLists.txt  LICENSE  Makefile  README.md  debug.h  file.c  jpeg.c  main.c  pud.c  pud.h  pudviewer.h
cmake/: check_compiler_warnings.cmake  check_function.cmake  copy_file.cmake  uninstall.cmake
data/: CMakeLists.txt  cibola.ppm  mirrors.pud  pud_format.txt
data/images/: icons_radius.xcf  icons_spread.xcf
data/sprites/buildings/: forest.eet  swamp.eet  wasteland.eet  winter.eet
data/sprites/units/: units.eet
data/themes/: CMakeLists.txt  default.edc
data/tiles/: forest.eet  swamp.eet  wasteland.eet  winter.eet
data/tiles/edc/: forest.edc  swamp.edc  wasteland.edc  winter.edc
data/tiles/edj/: forest.edj  swamp.edj  wasteland.edj  winter.edj
data/tiles/eet/: forest.eet  swamp.eet  wasteland.eet  winter.eet
doc/: CMakeLists.txt  Doxyfile_pud.in  Doxyfile_war2.in  icon_banks.txt  pud.c  pud.dox  pud_format.txt  tile_maps.txt  war2.c  war2.dox
include/: CMakeLists.txt  bool.h  common.h  debug.h  jpeg.h  pud.h  pud_config.h.in  pud_private.h  war2.h  war2_private.h
info/: .pud.txt.swp
lib/: CmakeLists.txt  defaults.c  img.c  parse.c  print.c  private.c  private.h  pud.c  tiles.c  utils.c
libpud/: CMakeLists.txt  CmakeLists.txt  common.c  defaults.c  img.c  jpeg.c  mmap.c  parse.c  png.c  print.c  private.c  pud.c  random.c  tiles.c  utils.c
libwar2/: CMakeLists.txt  CmakeLists.txt  cursors.c  font.c  jpeg.c  png.c  ppm.c  private.c  sprites.c  tileset.c  ui.c  units.c  war2.c
pc/: CMakeLists.txt  CmakeLists.txt  pud.pc.in  war2.pc.in
pud/: CMakeLists.txt  CmakeLists.txt  getopt_mingw.h  jpeg.c  main.c  png.c  ppm.c  pud2png  pudutils.h  sections.c
quicklook/: CMakeLists.txt  test.sh
quicklook/Pud/: GeneratePreviewForURL.c  GenerateThumbnailForURL.c  Info.plist  main.c  ql_generate.c  ql_generate.h
quicklook/Pud.qlgenerator/Contents/: Info.plist
quicklook/Pud.qlgenerator/Contents/MacOS/: Pud
quicklook/Pud.xcodeproj/: project.pbxproj
quicklook/Pud.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
quicklook/Pud.xcodeproj/project.xcworkspace/xcshareddata/: Pud.xccheckout
quicklook/Pud.xcodeproj/project.xcworkspace/xcuserdata/Jean.xcuserdatad/: UserInterfaceState.xcuserstate
quicklook/Pud.xcodeproj/xcuserdata/Jean.xcuserdatad/xcschemes/: Pud.xcscheme  xcschememanagement.plist
tests/: CMakeLists.txt  test_suite.h
tests/libpud/: CMakeLists.txt  cibola.pud  garbage.pud  test_open.c  test_standalone.c  tests.c  tests.h
tools/: CMakeLists.txt  CmakeLists.txt  Makefile  alow_ugrd_set.c  data_to_sprite.c  defaults_gen.c  era_icon_palette_gen.c  extract.c  extract_icons.c  extract_sprites.c  extract_tiles.c  font.c  gen_icons_atlas.c  gen_sprites_data.c  opensave.c  png2edj.sh  ppm.c  ppm.h  ppm_cmp.c  random_gen.c  sprites_colorize.c  tilemap.c  tiler.c  tiles.c  udta_gen.c
