install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/eet/forest.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/eet/winter.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/eet/wasteland.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/eet/swamp.eet DESTINATION share/${PROJECT_NAME}/tiles)

