install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/forest.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/winter.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/wasteland.eet DESTINATION share/${PROJECT_NAME}/tiles)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tiles/swamp.eet DESTINATION share/${PROJECT_NAME}/tiles)

add_subdirectory(themes)

